--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -1,129 +1,73 @@
 * {
    box-sizing: border-box;
 }
-
 body {
+  font-family: "Century Gothic";
   font-size: 16px;
-  color: black;
-  background-color: white;
-  font-family: sans-serif;
+  color: #000;
+  background-color: #3e986d;
 }
 
 #header-nav {
-  background-color: #cff216;
+  background-color: #6ab0ff;
   border-radius: 0;
   border: 0;
 }
 
-.navbar-brand h1 { 
-  font-family: serif;
-  color: blue;
-  font-size: 1.5em;
-  text-transform: uppercase;
-  font-weight: bold;
-  text-shadow: 1px 1px 1px #222;
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: .75;
-}
-
-#nav-list {
-  margin-top: 10px;
-}
-#nav-list a {
+.navbar-default .navbar-brand { 
   color: black;
-  text-align: center;
-}
-#nav-list a:hover {
-  background: #E7E7E7;
-}
-#nav-list a span {
-  font-size: 1.8em;
+ }
+
+.navbar-brand {
+  padding-top: 20px;
+  margin-bottom: 20px;
+  text-align: left;
+  font-size: 2em;
+  font-family:"Comic Sans MS";
+  color: black;
 }
 
+.page-header { 
+  font-size: 2em;
+ }
 
-.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-  border: 1px solid #61122f;
-}
-.navbar-header button.navbar-toggle {
+
+#header-nav button.navbar-toggle {
   clear: both;
-  margin-top: -60px;
+  margin-top: -50px;
 }
 
-.textInDiv{
-  background-color: grey;
-  margin-bottom: 30px;
-  margin-right: 10px;
-}
-.text{
-  padding:10px;
-}
-#Chicken, #Beef, #Sushi{
-  text-align: center;
-  padding:10px;
-  font-weight: bold;
+#collapsable-nav > #nav-list > li {
+  font-size: 1em;
+  color: black;
+  background-color: #BCED91;
+  padding: 10px 0 10px 0;
+  border-top: 2px solid black;
+  border-left: 2px solid black;
+  border-right: 2px solid black;  
 }
 
-@media (min-width: 992px){
-.col-md-3 {
-    width: 30%;
+#collapsable-nav > #nav-list > li:hover {
+  background-color: #E7FF91;
 }
+
+#collapsable-nav > #nav-list > li:nth-child(1) {
+  margin-top: -7.4px;
+  padding: 10px 0 10px 0;
 }
-@media (max-width: 767px) {
 
-  .col-xs-10 {    
-      margin: 30px;
-    }
-  .navbar-brand {
-    padding-top: 10px;
-    height: 80px;
-  }
-  .navbar-brand h1 {
-    padding-top: 10px;
-    font-size: 5vw; /* 1vw = 1% of viewport width */
-  } 
-  .navbar-brand p img { 
-    height: 20px;
-  }
-
-  #collapsable-nav a { /* Collapsed nav menu text */
-    font-size: 1.2em;
-  }
-  #collapsable-nav a span { /* Collapsed nav menu glyph */
-    font-size: 1em;
-    margin-right: 5px;
-  }
-
-  #call-btn > a {
-    font-size: 1.5em;
-    display: block;
-    margin: 0 20px;
-    padding: 10px;
-    border: 2px solid #fff;
-    background-color: #f6b319;
-    color: #951c49;
-  }
-  #xs-deliver {
-    margin-top: 5px;
-    font-size: .7em;
-    letter-spacing: .1em;
-    text-transform: uppercase;
-  }
-  /* End Header */ 
-
- 
+#collapsable-nav > #nav-list > li:nth-child(3) {
+  margin-bottom: -7.4px;
+  border-bottom: 2px solid black;
+}
 
 
-/********** Super extra small devices Only :-) (e.g., iPhone 4) **********/
-@media (max-width: 479px) {  
-  .navbar-brand h1 { /* Restaurant name */
-    padding-top: 5px;
-    font-size: 6vw;
-  }
-  .textInDiv{
-  background-color: grey;
-  margin-bottom: 30px;
-  margin-left: 30px;
+#main-content {
+  margin-top: 70px;
+  background-color: #3e986d;
+}
 
-
+#main-content > section {
+  background-color: #dbdbdb;
+  margin-bottom: 50px;
 }
