--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -1,129 +1,35 @@
 * {
-   box-sizing: border-box;
+  box-sizing:border-box;
+  padding:0px;
+  margin:0px;
 }
 
-body {
-  font-size: 16px;
-  color: black;
-  background-color: white;
-  font-family: sans-serif;
+body
+{
+  font-family:Arial;
 }
 
-#header-nav {
-  background-color: #cff216;
-  border-radius: 0;
-  border: 0;
+@media (min-width: 10px) {
+  .navbar {
+    border-radius: 0px;
+    background-color: black;
+  }
 }
 
-.navbar-brand h1 { 
-  font-family: serif;
-  color: blue;
-  font-size: 1.5em;
-  text-transform: uppercase;
-  font-weight: bold;
-  text-shadow: 1px 1px 1px #222;
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: .75;
-}
-
-#nav-list {
+.header-title
+{
+  font-size:2em;
+  font-weight:bold;
+  margin-bottom: 30px;
   margin-top: 10px;
 }
-#nav-list a {
-  color: black;
-  text-align: center;
-}
-#nav-list a:hover {
-  background: #E7E7E7;
-}
-#nav-list a span {
-  font-size: 1.8em;
-}
 
-
-.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-  border: 1px solid #61122f;
-}
-.navbar-header button.navbar-toggle {
-  clear: both;
-  margin-top: -60px;
-}
-
-.textInDiv{
-  background-color: grey;
-  margin-bottom: 30px;
-  margin-right: 10px;
-}
-.text{
+.container-text
+{
+  background-color:#E7E7E7;
+  border:black 2px solid;
+  position:relative;
+  margin:10px;
   padding:10px;
-}
-#Chicken, #Beef, #Sushi{
-  text-align: center;
-  padding:10px;
-  font-weight: bold;
-}
-
-@media (min-width: 992px){
-.col-md-3 {
-    width: 30%;
-}
-}
-@media (max-width: 767px) {
-
-  .col-xs-10 {    
-      margin: 30px;
-    }
-  .navbar-brand {
-    padding-top: 10px;
-    height: 80px;
-  }
-  .navbar-brand h1 {
-    padding-top: 10px;
-    font-size: 5vw; /* 1vw = 1% of viewport width */
-  } 
-  .navbar-brand p img { 
-    height: 20px;
-  }
-
-  #collapsable-nav a { /* Collapsed nav menu text */
-    font-size: 1.2em;
-  }
-  #collapsable-nav a span { /* Collapsed nav menu glyph */
-    font-size: 1em;
-    margin-right: 5px;
-  }
-
-  #call-btn > a {
-    font-size: 1.5em;
-    display: block;
-    margin: 0 20px;
-    padding: 10px;
-    border: 2px solid #fff;
-    background-color: #f6b319;
-    color: #951c49;
-  }
-  #xs-deliver {
-    margin-top: 5px;
-    font-size: .7em;
-    letter-spacing: .1em;
-    text-transform: uppercase;
-  }
-  /* End Header */ 
-
- 
-
-
-/********** Super extra small devices Only :-) (e.g., iPhone 4) **********/
-@media (max-width: 479px) {  
-  .navbar-brand h1 { /* Restaurant name */
-    padding-top: 5px;
-    font-size: 6vw;
-  }
-  .textInDiv{
-  background-color: grey;
-  margin-bottom: 30px;
-  margin-left: 30px;
-
-
+  padding-top:0px;
 }
